2010-09-10  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Toshiba-GL_1010.xml, printer/Toshiba-GL_1020.xml,
	  printer/Toshiba-GL-1010.xml, printer/Toshiba-GL-1020.xml,
	  db/oldprinterids: Renamed the printers to match the names in the
	  manufacturer-supplied PPD files.

2010-09-07  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Sharp-AR-168D.xml,
	  db/source/printer/Sharp-AR-168S.xml,
	  db/source/printer/Sharp-AR-5220.xml,
	  db/source/printer/Sharp-AR-BC260.xml,
	  db/source/printer/Sharp-AR-BC320.xml,
	  db/source/printer/Sharp-AR-C170M.xml,
	  db/source/printer/Sharp-AR-C172M.xml,
	  db/source/printer/Sharp-AR-C260.xml,
	  db/source/printer/Sharp-AR-C260F.xml,
	  db/source/printer/Sharp-AR-C260M.xml,
	  db/source/printer/Sharp-AR-C260P.xml,
	  db/source/printer/Sharp-AR-C260S.xml,
	  db/source/printer/Sharp-AR-C261F.xml,
	  db/source/printer/Sharp-AR-C261M.xml,
	  db/source/printer/Sharp-AR-C261S.xml,
	  db/source/printer/Sharp-AR-C262M.xml,
	  db/source/printer/Sharp-AR-C262S.xml,
	  db/source/printer/Sharp-AR-M351N.xml,
	  db/source/printer/Sharp-AR-M351U.xml,
	  db/source/printer/Sharp-AR-M355N.xml,
	  db/source/printer/Sharp-AR-M355U.xml,
	  db/source/printer/Sharp-AR-M451N.xml,
	  db/source/printer/Sharp-AR-M451U.xml,
	  db/source/printer/Sharp-AR-M455N.xml,
	  db/source/printer/Sharp-AR-M455U.xml,
	  db/source/printer/Sharp-AR-M550N.xml,
	  db/source/printer/Sharp-AR-M550U.xml,
	  db/source/printer/Sharp-AR-M620N.xml,
	  db/source/printer/Sharp-AR-M620U.xml,
	  db/source/printer/Sharp-AR-M700N.xml,
	  db/source/printer/Sharp-AR-M700U.xml,
	  db/source/printer/Sharp-ARP350.xml,
	  db/source/printer/Sharp-ARP450.xml:
	  Entries modified in the MySQL database.

2010-09-06  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Brother/BR7840_2_GPL.ppd, PPD/Brother/BR784N_2_GPL.ppd,
	  printer/Brother-MFC-7840W.xml, printer/Brother-MFC-7840N.xml:
	  Added entries and PPD for the Brother MFC-7840W and MFC-7840N