@@ -1,0 +1,17 @@
+<printer id="printer/HP-Laserjet_P1020">
+  <make>HP</make>
+  <model>Laserjet P1020</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <pcl level="5" />
+  </lang>
+  <functionality>F</functionality>
+</printer>
