@@ -1,3 +1,8 @@
+2010-09-13  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/HP-Laserjet_P1020.xml:
+	  New entries added to the MySQL database.
+
 2010-09-10  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Toshiba-GL_1010.xml, printer/Toshiba-GL_1020.xml,
